--- a/.github/workflows/nightly-mac.yml
+++ b/.github/workflows/nightly-mac.yml
@@ -1,6 +1,9 @@
 name: macOS build
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
   schedule:
     - cron:  '30 7 * * 1,5'
@@ -16,7 +19,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: '3.13.1'
+        python-version: '3.13.5'
 
     - name: Toolchain Cache
       id: mac-toolchain
@@ -74,6 +77,7 @@ jobs:
     name: Deploy Nightly Build
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name != 'pull_request'
     steps:
       - uses: actions/checkout@v4
        
