--- a/.github/workflows/nightly-mac.yml
+++ b/.github/workflows/nightly-mac.yml
@@ -21,6 +21,10 @@ jobs:
       with:
         python-version: '3.13.5'
 
+    - name: Install build dependencies
+      run: |
+        brew install autoconf automake libtool pkg-config cmake nasm
+
     - name: Toolchain Cache
       id: mac-toolchain
       uses: actions/cache@v4
